ref #33393: install crane to tmp directory before creating image for posix tests